--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to Agora Labs!'
 ---
 
 <img
@@ -14,58 +14,31 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## What is Agora Labs?
 
-The first step to world-class documentation is setting up your editing environments.
+Agora Labs creates AI development environments backed by affordable, high-powered GPUs. In less than 5 minutes, you can go from selecting the base image, GPU type and number of GPUs to fine-tuning an LLM with a Jupyter Lab interface.
+
+## Why Agora Labs?
+
+When we went to finetune LLaMa2-7B we found that we were not able to find powerful enough GPUs for finetuning or would wind up spending hundreds of $s doing so. Furthermore, renting a GPU required installing the necessary libraries and copying our data over. It took half an hour before we were even fine-tuning!
+
+Our platform provides high-powered GPUs (including clusters) such as A100s, at the cheapest prices. Configure your dev environment and get to your task in less than 5 minutes.
+
+## Creating your First Lab
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Quickstart"
+    icon="play"
+    href="quickstart"
   >
-    Get your docs set up locally for easy development
+    How to launch your first lab
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
+    title="Google Drive"
+    icon="google"
     href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
+    Connect your Google Drive for copying and saving files
   </Card>
 </CardGroup>
