made edits to content and update styling

--- a/console/credits.mdx
+++ b/console/credits.mdx
@@ -16,6 +16,8 @@ If you run out credits, any running Lab will be shut down. You must purchase mor
 
 Lab's are priced in credits per hour. The rate is calculated by the GPU type and number of GPU(s) selected.
 
+Each Lab will reflect the amount of credits you have used. This is deducted from your total credits.
+
 ## Buying Credits
 
 In order to buy credits, go to the Buy Credits page.
