--- a/console/lab.mdx
+++ b/console/lab.mdx
@@ -4,7 +4,7 @@ description: 'Your high-powered AI development environment'
 icon: 'flask'
 ---
 
-Each Lab has a name, image, GPU type and number of GPUs as well as an optional storage connection.
+Each Lab has a **name**, **image**, **GPU type** and **number of GPUs** as well as an optional _storage connection_.
 
 <Note>You are currently limited to only having 1 lab active at a time.</Note>
 
@@ -20,7 +20,7 @@ If you have an image you would like to see supported, please let us know.
 
 ## GPU(s)
 
-We support different NVIDIA GPU types on our platform. Each type comes with a specific amount of VRAM and processing power as well as the credits used per hour. _Link info to GPU types here._ We currently support:
+We support different NVIDIA GPU types on our platform. Each type comes with an amount of VRAM (memory) and processing power. Each type also specifies the credits used per hour. We currently support:
 - ```RTX 3090```
 - ```RTX 4090```
 - ```RTX A6000```
