--- a/introduction.mdx
+++ b/introduction.mdx
@@ -16,11 +16,11 @@ description: 'Welcome to Agora Labs!'
 
 ## What is Agora Labs?
 
-Agora Labs creates AI development environments backed by affordable, high-powered GPUs. In less than 5 minutes, you can go from selecting the base image, GPU type and number of GPUs to fine-tuning an LLM with a Jupyter Lab interface.
+Agora Labs creates AI development environments backed by cheap, high-powered GPUs. In less than 5 minutes, you can go from selecting the base image, GPU type and number of GPUs to fine-tuning an LLM with a Jupyter Lab interface.
 
 ## Why Agora Labs?
 
-When we went to finetune LLaMa2-7B we found that we were not able to find powerful enough GPUs for finetuning or would wind up spending hundreds of $s doing so. Furthermore, renting a GPU required installing the necessary libraries and copying our data over. It took half an hour before we were even fine-tuning!
+When we went to finetune LLaMa2-7B we found that we were not able to find powerful enough GPUs for finetuning or would wind up spending hundreds of dollars doing so. Furthermore, renting a GPU required installing the necessary libraries and copying our data over. It took half an hour before we were even fine-tuning!
 
 Our platform provides high-powered GPUs (including clusters) such as A100s, at the cheapest prices. Configure your dev environment and get to your task in less than 5 minutes.
 
@@ -32,13 +32,13 @@ Our platform provides high-powered GPUs (including clusters) such as A100s, at t
     icon="play"
     href="quickstart"
   >
-    How to launch your first lab
+    How to launch your first Lab
   </Card>
   <Card
     title="Google Drive"
     icon="google"
-    href="https://mintlify.com/docs/development"
+    href="connect-google-drive"
   >
-    Connect your Google Drive for copying and saving files
+    Copy and save files to your Lab with Google Drive
   </Card>
 </CardGroup>
