--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -11,7 +11,7 @@ Navigate to the Create Lab page.
     Give your lab a fun name.
   </Step>
   <Step title="Select an Image">
-    Select the base image for your development environment. For now we just support Pytorch but in the future will support custom images like Stable Diffusion.
+    Select the base image for your development environment. For now we just support ```pytorch``` but in the future will support custom images like ```stable-diffusion```.
   </Step>
   <Step title="Configure your GPU(s)">
     Select your GPU type based on your development needs.
@@ -19,11 +19,19 @@ Navigate to the Create Lab page.
     Specify the number of GPUs you need. For now, we are just supporting 1-2 GPUs but plan to expand to larger clusters in the future.
   </Step>
   <Step title="Connect Google Drive (Optional)">
-    If you would like to have a folder from your Google Drive copied to your development environment and save any newly created files to your Drive, you will first need to [connect your Drive](development).
+    If you would like to have a folder from your Google Drive copied to your development environment and save any newly created files to your Drive, you will first need to [connect your Drive](connect-google-drive).
 
-    Once connected, toggle on the connection and select the folder you would like to copy/save from/to.
+    Once connected, toggle on the connection and select the folder you would like to copy from and save to.
   </Step>
   <Step title="Launch Lab">
     Click the Launch button and wait for your Lab to become available.
+  </Step>
+  <Step title="Open your Lab">
+    Click the ```Open``` button to open up the Jupyter Lab interface.
+
+    You're now ready to perform any AI task!
+  </Step>
+  <Step title="Close your Lab">
+    When you're finished with your work, click the ```Close``` button.
   </Step>
 </Steps>
