--- a/console/google-drive.mdx
+++ b/console/google-drive.mdx
@@ -1,36 +1,34 @@
 ---
 title: 'Google Drive'
-description: ''
+description: 'Copy files to and from your Lab'
 icon: 'google'
 ---
 
-Google Drive enables you to bring any files you'd like to your Lab and save any files you create.
+We recommend connecting Google Drive if you're lookignt to copy/save Jupyter Notebooks, datasets or model checkpoints.
 
-This is good for transporting Jupyter Notebook files, datasets and model checkpoints.
-
-The only other option for moving files is uploading and downloading from the Lab itself. We recommend that if you are using files over 10 MB, to use Google Drive instead of the Lab interface for transportings.
+The only other option for moving files is uploading and downloading using the Lab inteface. If you are using files over 10 MB, we recommend using Google Drive as it has better performance.
 
 ## Connecting
 
-You first need to [connect your Drive](google-drive) in order to use it with a Lab.
+You first need to [connect your Drive](../connect-google-drive) in order to use it with a Lab.
 
 ## Automatic Copies
 
 When you have enabled Google Drive connection on your Lab, all files from the folder you selected will be copied over when the Lab is first created.
 
-Likewise, when you close your Lab, all files on yor Lab will be copied to your Google Drive folder.
+Likewise, when you close your Lab, all new files on your Lab will be copied to your Google Drive folder.
 
 ## Copy to Lab
 
-At any point in time, you can copy the files from your Google Drive to your Lab.
+At any point in time, you can copy new files from your Google Drive to your Lab.
 
-Say you wanted to test fine-tuning on a new dataset you had locally. You can upload the dataset to your Google Drive folder and then click the "Copy to Lab" button.
+Say you wanted to test fine-tuning on a new dataset you have locally. You can upload the dataset to your Google Drive folder and then click the ```Copy to Lab``` button.
 
 ## Copy to Drive
 
 Likewise, at any point in time you can copy files from your Lab to your Google Drive.
 
-If you had a model checkpoint that was generated that you would like to test locally, you can click the "Copy to Drive" button, and then download the checkpoint from Drive.
+If you had a model checkpoint that was generated that you would like to test locally, you can click the ```Copy to Drive``` button and it will appear in your Drive folder.
 
 ## Selecting Folders
 
