--- a/introduction.mdx
+++ b/introduction.mdx
@@ -8,11 +8,16 @@ description: 'Welcome to Agora Labs!'
   src="/images/hero-light.svg"
   alt="Hero Light"
 />
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<Frame>
+  <img
+    className="hidden dark:block"
+    src="/logo/logo.png"
+    height="400"
+    width="400"
+    alt="Hero Dark"
+  />
+</Frame>
+
 
 ## What is Agora Labs?
 
