--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,6 +3,10 @@ title: 'Quickstart'
 description: 'Get to your AI task in less than 5 minutes'
 ---
 
+<img
+  height="200"
+  src="/images/Rotating_earth_(large).gif"
+/>
 Navigate to the Create Lab page.
 
 
