update create lab gif

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,7 +5,7 @@ description: 'Get to your AI task in less than 5 minutes'
 
 <img
   height="200"
-  src="/images/Rotating_earth_(large).gif"
+  src="/images/CreateLabPage.gif"
 />
 Navigate to the Create Lab page.
 
