--- a/console/credits.mdx
+++ b/console/credits.mdx
@@ -8,7 +8,9 @@ icon: 'credit-card'
 
 Credits are how Lab instances are paid for on the Agora platform.
 
-<Note>Each user is given 5 free credits</Note>
+1 credit = $1
+
+<Note>Each user is given 3 free credits</Note>
 
 If you run out credits, any running Lab will be shut down. You must purchase more credits in order to create a new Lab.
 
@@ -20,7 +22,7 @@ Each Lab will reflect the amount of credits you have used. This is deducted from
 
 ## Buying Credits
 
-In order to buy credits, go to the Buy Credits page.
+In order to buy credits, click the ```Add Credits``` button.
 
 Once there, select the number of credits you would like to buy.
 
