--- a/console/google-drive.mdx
+++ b/console/google-drive.mdx
@@ -4,9 +4,9 @@ description: 'Copy files to and from your Lab'
 icon: 'google'
 ---
 
-We recommend connecting Google Drive if you're lookignt to copy/save Jupyter Notebooks, datasets or model checkpoints.
+We recommend connecting Google Drive if you're lookign to copy/save Jupyter Notebooks, datasets or model checkpoints.
 
-The only other option for moving files is uploading and downloading using the Lab inteface. If you are using files over 10 MB, we recommend using Google Drive as it has better performance.
+The only other option for moving files is uploading and downloading using the Lab interface. If you are using files over 10 MB, we recommend using Google Drive as it has better performance.
 
 ## Connecting
 
@@ -18,17 +18,17 @@ When you have enabled Google Drive connection on your Lab, all files from the fo
 
 Likewise, when you close your Lab, all new files on your Lab will be copied to your Google Drive folder.
 
-## Copy to Lab
+## Upload from Drive
 
 At any point in time, you can copy new files from your Google Drive to your Lab.
 
-Say you wanted to test fine-tuning on a new dataset you have locally. You can upload the dataset to your Google Drive folder and then click the ```Copy to Lab``` button.
+Say you wanted to test fine-tuning on a new dataset you have locally. You can upload the dataset to your Google Drive folder and then click the ```Save to Drive``` button.
 
-## Copy to Drive
+## Save to Drive
 
 Likewise, at any point in time you can copy files from your Lab to your Google Drive.
 
-If you had a model checkpoint that was generated that you would like to test locally, you can click the ```Copy to Drive``` button and it will appear in your Drive folder.
+If you had a model checkpoint that was generated that you would like to test locally, you can click the ```Save to Drive``` button and it will appear in your Drive folder.
 
 ## Selecting Folders
 
